WexGit/Wex_DX/force-app/main/default/objects/Truckers_Merchant_Fuel__c/fields/Fuel_Date__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fuel Date</label>
    <type>Date</type>
</CustomField>