WexGit/Wex_DX/force-app/main/default/objects/Truckers_Merchant_Fuel__c/fields/Gallons__c.field-meta.xml
<CustomField>
    <fullName>Gallons__c</fullName>
    <label>Gallons</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>