WexGit/Wex_DX/force-app/main/default/objects/Truckers_Merchant_Fuel__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <description>TruckersB2B Merchant Fuel data</description>
    <label>Merchant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Truckers Merchant Fuel</relationshipLabel>
    <relationshipName>Truckers_Merchant_Fuel</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>